--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGOURL="mongodb+srv://mainadominic628:Dominic77.@ecommerce.iljqts6.mongodb.net/?retryWrites=true&w=majority&appName=Ecommerce"
+MONGOURL="mongodb+srv://mainadominic628:Dominic77.@clustereapp.50ogx.mongodb.net/?retryWrites=true&w=majority&appName=ClusterEapp"
 PORT= 5000
